kostra aplikacie 💩
