# internal/ambulance/model_patient.go
@@ -1,0 +1,23 @@
+/*
+ * Patient and Illness Management API
+ *
+ * Patient and Illness Management API
+ *
+ * API version: 1.0.0
+ * Contact: support@example.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package ambulance
+
+type Patient struct {
+
+	// Unique identifier for the patient
+	Id string `json:"id"`
+
+	// Patient's full name
+	Name string `json:"name"`
+
+	// List of patient's illnesses, initialized as empty array on creation
+	Illnesses []Illness `json:"illnesses,omitempty"`
+}
