# internal/ambulance/model_update_sick_leave_end_date_request.go
@@ -1,0 +1,16 @@
+/*
+ * Patient and Illness Management API
+ *
+ * Patient and Illness Management API
+ *
+ * API version: 1.0.0
+ * Contact: support@example.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package ambulance
+
+type UpdateSickLeaveEndDateRequest struct {
+
+	SlUntil string `json:"sl_until"`
+}
